<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue2"
    android:padding="@dimen/medalSpace"
    tools:context=".fragments.SearchFragment"
    app:layoutDescription="@xml/activity_search_scene">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardshape"
        android:hint="@string/Search"
        android:padding="@dimen/medalSpace"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="this box for searching country" />

    <ImageButton
        android:id="@+id/searchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medalSpace"
        android:background="@color/darkBlue"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="@+id/et_search"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
        app:layout_constraintTop_toTopOf="@+id/et_search" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/zeroSpace"
        android:layout_height="@dimen/zeroSpace"
        app:cardCornerRadius="@dimen/largeSpace"
        app:cardElevation = "@dimen/Elevation"
        app:cardBackgroundColor = "@color/darkBlue"
        android:layout_marginBottom="@dimen/largeSpace"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightofConstraint"
            android:background="@drawable/cardshape"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintEnd_toEndOf="@+id/et_search"
            app:layout_constraintStart_toStartOf="@+id/et_search">

            <TextView
                android:id="@+id/tv_countrySearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_populationSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smallSpace"
                android:text="@string/population"
                android:textColor="@color/lightGray"
                android:textSize="@dimen/medalSpace"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                tools:ignore="SpUsage" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/verylargeSpace"
                android:src="@drawable/ic_baseline_people_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_countrySearch"
                app:layout_constraintTop_toBottomOf="@+id/tv_countrySearch" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medalSpace"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />


</androidx.constraintlayout.motion.widget.MotionLayout>
